2007-05-22  Hans Boehm <Hans.Boehm@hp.com>
	
	* malloc.c(GC_free): Ignore bad frees on MSWIN32 with REDIRECT_MALLOC.
	* NT_MAKEFILE: msvc_dbg.h is in include/private.  Don't use cvars
	rc.
	* misc.c (WIN32 GC_write): Define GC_need_to_lock in single-threaded
	case.
	* win32_threads.c: Test for __MINGW32__ in addition to _MINGW_VER.
	(GC_CreateThread, GC_beginthreadex): Deallocate args even if we fail.
	* include/gc.h: Add GC_reachable_here().  (GC_WinMain): Add GC_API.
	(GC_beginthreadex, GC_endthreadex, GC_ExitThread): Declare.
	* tests/test.c: Add GC_reachable_here() call.

2007-05-21  Hans Boehm <Hans.Boehm@hp.com>

	* alloc.c (GC_try_to_collect): Call GC_init if necessary.
	* tests/thread_leak_test.c: Don't unconditionally define
	GC_LINUX_THREADS.

2007-05-21  Andreas Tobler  <a.tobler@schweiz.org>

	* Makefile.am: Remove extra_ldflags_libgc definition.
	* Makefile.in: Regenerate.

2007-05-17  Hans Boehm <Hans.Boehm@hp.com>

	* include/private/gc_priv.h: Define AO_REQUIRE_CAS.

2007-05-16  Hans Boehm <Hans.Boehm@hp.com>

	* finalize.c (GC_unreachable_finalize_mark_proc): Don't return void
	value.

2007-05-15  Hans Boehm <Hans.Boehm@hp.com>

	* configure.ac, version.h, doc/README: Change version to 7.0alpha10.
	* configure: Regenerate.

[7.0alpha9 release]

2007-05-15  Hans Boehm <Hans.Boehm@hp.com>

	* configure.ac, version.h, doc/README: Change version to 7.0alpha9.
	* configure: Regenerate.

2007-05-15  Hans Boehm <Hans.Boehm@hp.com>

	* Makefile.am: Include NT_STSTIC_THREADS_MAKEFILE in dist.
	* Makefile.in: Regenerate.
	* include/private/gc_locks.h: GC_compare_and_exchange, GC_atomic_add:
	remove. NUMERIC_THREAD_ID, THREAD_EQUAL: New.  GC_lock_holder: now
	unsigned long.  I_DONT_HOLD_LOCK, I_HOLD_LOCK: Update.
	* pthread_stop_world.c, pthread_support.c, win32_threads.c: Use
	NUMERIC_THREAD_ID, THREAD_EQUAL.
	* include/private/gcconfig.h: GENERIC_COMPARE_AND_SWAP: Remove.
	* include/private/thread_local_alloc.h: Don't USE_COMPILER_TLS on
	ARM.
