@@ -1,4 +1,8 @@
 2007-05-22  Hans Boehm <Hans.Boehm@hp.com>
+
+	* include/private/gc_locks.h: Format to 80 columns.
+
+2007-05-22  Hans Boehm <Hans.Boehm@hp.com>
 	
 	* malloc.c(GC_free): Ignore bad frees on MSWIN32 with REDIRECT_MALLOC.
 	* NT_MAKEFILE: msvc_dbg.h is in include/private.  Don't use cvars
